@@ -43,7 +43,7 @@ class RelStorage(BaseStorage,
     """Storage to a relational database, based on invalidation polling"""
 
     def __init__(self, adapter, name=None, create=True,
-            read_only=False, poll_interval=0):
+            read_only=False, poll_interval=0, pack_gc=True):
         if name is None:
             name = 'RelStorage on %s' % adapter.__class__.__name__
 
@@ -51,6 +51,7 @@ class RelStorage(BaseStorage,
         self._name = name
         self._is_read_only = read_only
         self._poll_interval = poll_interval
+        self._pack_gc = pack_gc
 
         if create:
             self._adapter.prepare_schema()
@@ -667,6 +668,22 @@ class RelStorage(BaseStorage,
             self._lock_release()
 
 
+    def set_pack_gc(self, pack_gc):
+        """Configures whether garbage collection during packing is enabled.
+
+        Garbage collection is enabled by default.  If GC is disabled,
+        packing keeps at least one revision of every object.
+        With GC disabled, the pack code does not need to follow object
+        references, making packing conceivably much faster.
+        However, some of that benefit may be lost due to an ever
+        increasing number of unused objects.
+
+        Disabling garbage collection is also a hack that ensures
+        inter-database references never break.
+        """
+        self._pack_gc = pack_gc
+
+
     def pack(self, t, referencesf):
         if self._is_read_only:
             raise POSException.ReadOnlyError()
@@ -700,7 +717,7 @@ class RelStorage(BaseStorage,
                 # In pre_pack, the adapter fills tables with
                 # information about what to pack.  The adapter
                 # should not actually pack anything yet.
-                adapter.pre_pack(tid_int, get_references)
+                adapter.pre_pack(tid_int, get_references, self._pack_gc)
 
                 # Now pack.
                 adapter.pack(tid_int)
@@ -734,7 +751,7 @@ class BoundRelStorage(RelStorage):
         # self._zodb_conn = zodb_conn
         RelStorage.__init__(self, adapter=parent._adapter, name=parent._name,
             create=False, read_only=parent._is_read_only,
-            poll_interval=parent._poll_interval)
+            poll_interval=parent._poll_interval, pack_gc=parent._pack_gc)
         # _prev_polled_tid contains the tid at the previous poll
         self._prev_polled_tid = None
         self._showed_disconnect = False
@@ -841,7 +858,7 @@ class TransactionIterator(object):
         else:
             stop_int = None
 
-        # _transactions: [(tid, packed, username, description, extension)]
+        # _transactions: [(tid, username, description, extension, packed)]
         self._transactions = list(adapter.iter_transactions_range(
             self._cursor, start_int, stop_int))
         self._index = 0
@@ -871,7 +888,7 @@ class TransactionIterator(object):
 
 class RecordIterator(object):
     """Iterate over the objects in a transaction."""
-    def __init__(self, trans_iter, tid_int, packed, user, desc, ext):
+    def __init__(self, trans_iter, tid_int, user, desc, ext, packed):
         self.tid = p64(tid_int)
         self.status = packed and 'p' or ' '
         self.user = user or ''
